jvm,kafka,mongo,mysql,etc